@@ -1,3 +1,7 @@
+2011-10-22  MIYAMUKO Katsuyuki
+
+	* copy-file と featurep を上書きしないように shadow した
+
 2011-10-05  MIYAMUKO Katsuyuki
 
 	* typep, subtypep 周り以外はとりあえずだいたい動くようになった
